# lils

./: .gitignore  README.md  meson.build  net.danigm.lils.service.in  pyproject.toml
examples/: basic.ink  zypper.ink
lils/: __main__.py  cli.py  commands.py  dbus.py  ink.lark  ink.py  listeners.py
lils@danigm.net/: extension.js  message.js  metadata.json  rundialog.js  service.js  stylesheet.css
scripts/: debug-extension.sh  lils-dbus.sh
tests/: test_commands.py  test_ink.py  utils.py
tests/data/: basic-03.ink  basic-04.ink  command-01.ink  divert-01.ink  empty-lines.ink  full-01.ink  include-01.ink  include-02.ink  knot-01.ink  knot-02.ink  logic-01.ink  logic-02.ink  option-02.ink  option-03.ink  stitch-01.ink  stitch-02.ink  travel.ink  vars-01.ink  wait-01.ink  wait-02.ink  wait-03.ink
