[tool.poetry]
name = "lils"
version = "0.1.0"
description = "Linux Immersive Learning System"
authors = ["Daniel Garcia Moreno <daniel.garcia@suse.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.1.5"
pygobject = "^3.42.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[tool.poetry.scripts]
lils = "lils.__main__:main"
lils-dbus = "lils.dbus:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
